--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.png
+*.png
+*.png
+Assets/TextureHaven/terrain_4k/terrain_4k_textures/aerial_asphalt_01/aerial_asphalt_01_ao_4k.png
